# anemoi-inference-stretched-grid

./: main.py  pyproject.toml
inference/checkpoint/: __init__.py
inference/input/: __init__.py
inference/metadata/: data_indices.py
inference/model/: __init__.py
